fix bug that was creating overflow on x-axis in mobile view by resizing contact section

--- a/media.css
+++ b/media.css
@@ -137,7 +137,6 @@
   }
   .right ul,
   .right p {
-    width: 100%;
     margin-bottom: 20px;
   }
   .skills {
@@ -156,7 +155,7 @@
     width: 100%;
   }
   .contact-info {
-    width: 100%;
+    width: 90%;
   }
   .contact-info h2 {
     font-size: 50px;
